--- a/web/src/index.html
+++ b/web/src/index.html
@@ -2,29 +2,26 @@
 <html>
   <head>
     <title>Boomerang</title>
+
     <base href="/">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-    <!-- Polyfill(s) for older browsers -->
-    <script src="node_modules/core-js/client/shim.min.js"></script>
+    <link rel="stylesheet" href="static/rest_framework/css/bootstrap.min.css">
 
-    <script src="node_modules/zone.js/dist/zone.js"></script>
-    <script src="node_modules/systemjs/dist/system.src.js"></script>
-
-    <script src="systemjs.config.js"></script>
-    <script>
-      System.import('main.js').catch(function(err){ console.error(err); });
-    </script>
+    <script src="static/web/node_modules/core-js/client/shim.min.js"></script>
+    <script src="static/web/node_modules/zone.js/dist/zone.js"></script>
   </head>
 
   <body>
     <div class="container">
       <app>Loading...</app>
     </div>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </body>
+
+  <script src="static/rest_framework/js/jquery-1.12.4.min.js"></script>
+  <script src="static/rest_framework/js/bootstrap.min.js"></script>
+
+  <script src="static/web/js/boomerang.js"></script>
 </html>
