--- a/web/src/index.html
+++ b/web/src/index.html
@@ -23,5 +23,5 @@
   <script src="static/rest_framework/js/jquery-1.12.4.min.js"></script>
   <script src="static/rest_framework/js/bootstrap.min.js"></script>
 
-  <script src="static/web/js/boomerang.js"></script>
+  <script src="static/web/boomerang.js"></script>
 </html>
