web front-end as application, deploy fe to static, local deployment instructions

--- a/web/static/web/index.html
+++ b/web/static/web/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="static/rest_framework/css/bootstrap.min.css">
 
     <script src="static/web/node_modules/core-js/client/shim.min.js"></script>
-    <script src="static/web/node_modules/zone.js/dist/zone.js"></script>
+    <script src="static/web/node_modules/zone.js/dist/zone.min.js"></script>
   </head>
 
   <body>
