--- a/web/static/web/index.html
+++ b/web/static/web/index.html
@@ -8,6 +8,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="icon" href="static/boomerang/favicon.ico">
+
     <link rel="stylesheet" href="static/rest_framework/css/bootstrap.min.css">
 
     <script src="static/web/node_modules/core-js/client/shim.min.js"></script>
